--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="row align-items-center">
-        <div class="col">
+        <div class="col" id='address'>
 
           <label for="street">Street:</label>
           <h4 id="street"></h4>
